[project]
name = "sample-env"
version = "0.1.0"
description = "Utility to generate a sample env file for python code"
readme = "README.md"
authors = [
    { name = "Fauzaan Gasim", email = "hello@fauzaanu.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_env"]