[project]
name = "Sample Env"
version = "0.1.0"
description = "A utility to generate a sample .env file for Python projects by detecting environment variable references in the code."
readme = "README.md"
authors = [
    { name = "Fauzaan Gasim", email = "hello@fauzaanu.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_env"]
